<resources>
    <string name="app_name">OneMed</string>
    <string name="top_layer">top layer</string>
    <string name="top_layer_hello">Hello, Welcome back</string>
    <string name="home_btn">Home</string>
    <string name="book_appt">Book Appointment</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="hospital_location">View in Map</string>
    <string name="reschedule">Reschedule Appointment</string>
    <string name="call_hospital">Call Hospital</string>
    <string name="essentials">Essentials</string>
    <string name="up_prescription">Request Refill</string>
    <string name="have_taken">Have Taken</string>
    <string name="req_refill">Request Refill</string>
    <string name="call_doc">Call Doctor</string>
    <string name="mark_as_taken">Mark as taken</string>
    <string name="Med_dose">Amoxicillin 500mg</string>
    <string name="Med_instruct">Take 1 capsule every 8 hours</string>
    <string name="after_meal">After meal</string>
    <string name="taken_counter">2/3</string>
    <string name="view_all_appointments">View All Appointments</string>
    <string name="medical_records">Medical Records</string>
    <string name="search_hospitals">Search Hospitals</string>
    <string name="search_doctors">Search Doctors</string>
    <string name="upcoming_appointment">Upcoming Appointment</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="current_prescription">Current Prescription</string>
    <string name="add_new_prescription">Add New Prescription</string>
    <string name="no_prescription_yet">No Prescription Here yet!</string>
    <string name="no_prescription_instruction">Request new prescription here or call your doctor.</string>
    <string name="i_have_taken_counter">I have taken counter</string>
    <string name="there_are_no_upcoming_appointments_yet">There are no upcoming appointments yet!</string>
    <string name="book_a_new_appointment">Book a new Appointment</string>
    <string name="back">back</string>
    <string name="main_booking_screen">main booking screen</string>
    <string name="collapse_list">collapse list</string>
    <string name="select_doctor">Select Doctor</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="select_hospital">Select Hospital</string>
    <string name="select_specialty">Select Specialty</string>
    <string name="available_time_slots">Available Time Slots</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="filter_by_specialty">Filter by specialty</string>
    <string name="filter_by_doctor">Filter by Doctor</string>
    <string name="filter_by_hospital">Filter by Hospital</string>
    <string name="no_results_found">No results found</string>
    <string name="sorry_no_results_found">Sorry, no results found.</string>
    <string name="available_days">available days</string>
    <string name="specialty">specialty</string>
    <string name="appointment_or_prescription_tabs">appointment or prescription tabs</string>
    <string name="click_to_login">click to login</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">login</string>
    <string name="click_to_register">click to register</string>
    <string name="request_prescription">request prescription</string>
    <string name="no_results_icon_desc">No results found icon</string>
    <string name="book_again">book again</string>
    <string name="show_hospital_info">Show Hospital Info</string>
    <string name="upload_medical_record">Upload Medical Record</string>
    <string name="title">Title</string>
    <string name="enter_title_here">Enter title here...</string>
    <string name="language_spoken">Language spoken</string>
    <string name="hospital_list">Hospital List</string>

</resources>