<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Bar -->
    <View
        android:id="@+id/top_layer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/top_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back Button -->
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:padding="9dp"
        android:contentDescription="@string/back"
        android:scaleType="fitCenter"
        android:src="@drawable/back_svgrepo_com"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Page Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_appt"
        android:textColor="@color/cardview_light_background"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toTopOf="@id/top_layer"
        app:layout_constraintBottom_toBottomOf="@id/top_layer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Scrollable Area -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/top_layer"
        app:layout_constraintBottom_toTopOf="@id/bottomNavBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Specialty -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/specialtyInputLayout"
                style="@style/MyTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_by_specialty"
                app:boxStrokeWidth="3dp"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="#f1f1e6"
                >

                <AutoCompleteTextView
                    android:id="@+id/specialtyDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAccessibility="no" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- Doctor -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/doctorInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_by_doctor"
                android:layout_marginTop="12dp"
                app:endIconMode="clear_text"
                app:boxBackgroundColor="#f1f1e6"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:boxStrokeWidth="3dp">

                <AutoCompleteTextView
                    android:id="@+id/doctorDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAccessibility="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Hospital -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hospitalInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/filter_by_hospital"
                android:layout_marginTop="12dp"
                app:boxBackgroundColor="#f1f1e6"
                app:endIconMode="clear_text"
                app:boxStrokeWidth="3dp"
                app:boxStrokeColor="@color/text_input_box_stroke_color">

                <AutoCompleteTextView
                    android:id="@+id/hospitalDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAccessibility="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Results Recycler -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false" />

            <FrameLayout
                android:id="@+id/noDoctorContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="12dp"
                />

            <!-- Date Picker -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/text_input_box_stroke_color"
                app:boxBackgroundColor="#f1f1e6"
                android:hint="@string/choose_a_date">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:clickable="true"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Time Slots -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/available_time_slots"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/timeSlotSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:padding="10dp"
                android:layout_marginBottom="16dp" />

            <!-- Book Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/bookButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_appointment"
                android:enabled="false"
                style="@style/Widget.MaterialComponents.Button"
                android:background="@drawable/red_pill_button"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="90dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Bottom Nav -->
    <View
        android:id="@+id/bottomNavBackground"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/bottom_nav_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/circleBackground"
        android:layout_width="80dp"
        android:layout_height="45dp"
        android:src="@drawable/circle_bottom_nav"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/bookAppointment"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/book_appointment"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:contentDescription="@string/book_appt"
        app:layout_constraintTop_toTopOf="@id/circleBackground"
        app:layout_constraintBottom_toBottomOf="@id/circleBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/home_btn"
        android:scaleType="fitCenter"
        android:src="@drawable/onemed_logo_copy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/history_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/history"
        android:scaleType="fitCenter"
        android:src="@drawable/history_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/home_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/home_btn"
        android:textColor="#fffef6"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/book_appt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_appt"
        android:textColor="#ffaf0d"
        android:textSize="14sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toBottomOf="@id/bookAppointment"
        app:layout_constraintStart_toStartOf="@id/bookAppointment"
        app:layout_constraintEnd_toEndOf="@id/bookAppointment" />

    <TextView
        android:id="@+id/history_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/history"
        android:textColor="#fffef6"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
