<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="#e8fcff">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <!-- Medicine Name -->
        <TextView
            android:id="@+id/tvMedicineName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Medicine Name"
            android:textColor="#354954"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/checkmarkButton" />

        <!-- Mark as Taken Button -->

        <!-- Mark Taken Text -->

        <ImageButton
            android:id="@+id/checkmarkButton"
            android:layout_width="68dp"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/blue_pill_button"
            android:contentDescription="@string/i_have_taken_counter"
            android:padding="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/checkmark_svgrepo_com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/mark_taken_text"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mark_as_taken"
            android:textColor="#354954"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvMedicineName" />

        <!-- Dosage -->
        <TextView
            android:id="@+id/tvDosage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="Dosage Instructions"
            android:textColor="#354954"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvMedicineName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Instruction -->
        <TextView
            android:id="@+id/prescription_instruction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="instruction"
            android:textColor="#354954"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvDosage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Action Buttons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/prescription_instruction"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_refill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ff7f0d"
                android:text="@string/req_refill"
                android:textSize="12sp"
                app:cornerRadius="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/call_doctor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#ff7f0d"
                android:text="@string/call_doc"
                android:textSize="12sp"
                app:cornerRadius="16dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
