<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:background="#1e4e62"
        android:paddingEnd="5dp"
    android:paddingStart="5dp"
        >


        <!-- Doctor Name -->

    <TextView
        android:id="@+id/tvDoctorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:text="Dr. John Doe"
        android:textColor="#fffef6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Doc_specialty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/specialty"
        android:textColor="#fffef6"

        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="August 2, 2025 at 10:00 AM"
        android:textColor="#fffef6"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/hospitalImage"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/reschedule"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#ff7f0d"
            android:text="@string/reschedule"
            android:textSize="12sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@+id/hospitalImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/call_hospital"
            android:layout_width="200dp"
            android:layout_height="54dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="54dp"
            android:backgroundTint="#ff7f0d"
            android:text="@string/call_hospital"
            android:textSize="12sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toStartOf="@+id/hospitalImage"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Hospital Info -->



        <ImageView
            android:id="@+id/hospitalImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/thomson" />

        <!-- View in Map Button -->

        <TextView
            android:id="@+id/hospital_info"
            android:layout_width="125dp"
            android:layout_height="34dp"
            android:layout_marginTop="104dp"
            android:text="Thomson Hospital\nKota Damansara"
            android:textColor="#fffef6"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/view_in_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:backgroundTint="#ff7f0d"
        android:text="@string/hospital_location"
        android:textSize="12sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

